src/tests/errors/staticanalysis/naming/procedure_does_not_exist_fail.cmp
program procedure_does_not_exist_fail
begin
	proc xx()
	begin
         in
	end;
    	proc main()
	begin
        in
	   yy() /* Fail: Procedure does not exist. */
	end

end